--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,7 +11,8 @@
   --color-16: #F9FEFF;
   --pink-03: #C46;
   --text-color-dark: #FFF;
-  --gray-02: #EAEEF1; /* Light gray color background */
+  --gray-02: #EAEEF1;
+  /* Light gray color background */
   --gray-3: #ddd;
   --off-black: #080707;
   --black: #000;
@@ -230,10 +231,13 @@ main .section.highlight {
   padding: 24px 16px;
   margin-left: auto;
   margin-right: auto;
+  contain: layout style;
+  content-visibility: auto;
+  contain-intrinsic-size: 0 auto;
 }
 
 .shade-background {
-  z-index: 1000; 
+  z-index: 1000;
   top: 0;
   left: 0;
   bottom: 0;
@@ -272,9 +276,11 @@ main .section.highlight {
   }
 
   .page-container {
+    padding-top: 60px;
     max-width: var(--max-with);
     width: var(--width);
-    padding-top: 60px;
     padding-bottom: 60px;
+    contain: layout style;
+    content-visibility: auto;
   }
 }
